<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        style="@style/CardView.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/title_name_id"
                android:text="@string/order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/order_name_id" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/title_normalized_life_id"/>
        <TextView
                android:id="@+id/title_temp_id"
                android:text="@string/order_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/order_temperature_id"
                app:layout_constraintTop_toBottomOf="@+id/title_shelf_life_id"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:id="@+id/title_shelf_life_id"
                android:text="@string/order_shelf_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/order_shelf_life_id"
                app:layout_constraintTop_toBottomOf="@+id/title_decay_rate_id"
                app:layout_constraintBottom_toTopOf="@+id/title_temp_id"/>
        <TextView
                android:id="@+id/title_decay_rate_id"
                android:text="@string/order_decay_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/order_decay_rate_id"
                app:layout_constraintTop_toBottomOf="@+id/title_normalized_life_id"
                app:layout_constraintBottom_toTopOf="@+id/title_shelf_life_id"/>
        <TextView
                android:id="@+id/title_normalized_life_id"
                android:text="@string/order_normalized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/order_termperature_id"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@+id/title_name_id"
                app:layout_constraintBottom_toTopOf="@+id/title_decay_rate_id"/>
        <TextView
                android:id="@+id/order_temperature_id"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/title_temp_id"
                app:layout_constraintBottom_toBottomOf="@+id/title_temp_id"
                app:layout_constraintStart_toEndOf="@+id/title_temp_id" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/order_shelf_life_id"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/title_shelf_life_id"
                app:layout_constraintBottom_toBottomOf="@+id/title_shelf_life_id"
                app:layout_constraintEnd_toEndOf="@+id/order_temperature_id"/>
        <TextView
                android:id="@+id/order_decay_rate_id"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/title_decay_rate_id"
                app:layout_constraintBottom_toBottomOf="@+id/title_decay_rate_id"
                app:layout_constraintEnd_toEndOf="@+id/order_shelf_life_id"
        />
        <TextView
                android:id="@+id/order_termperature_id"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/title_normalized_life_id"
                app:layout_constraintBottom_toBottomOf="@+id/title_normalized_life_id"
                app:layout_constraintEnd_toEndOf="@+id/order_decay_rate_id"
        />
        <TextView
                android:id="@+id/order_name_id"
                android:text="@string/order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/title_name_id"
                app:layout_constraintBottom_toBottomOf="@+id/title_name_id"
                app:layout_constraintEnd_toEndOf="@+id/order_termperature_id"
        />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>