<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="fill_parent" android:layout_height="fill_parent"
                                             android:layout_alignParentBottom="true"
                                             android:orientation="horizontal" android:id="@+id/constraintLayout2">
    <!--U.I. busy spinner-->

    <!--Recycler view for shelf detail-->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_hot_list"
            android:layout_width="492dp"
            android:layout_height="wrap_content"
            android:divider="?android:verticalDivider"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:reverseLayout="true"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:elevation="?android:attr/actionBarSize"
            tools:listitem="@layout/kitchen_order_item_detail"
            app:layout_constraintStart_toStartOf="@+id/recycler_cold_list"
            app:layout_constraintBottom_toTopOf="@+id/recycler_cold_list" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline">
    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_frozen_list"
            android:layout_width="492dp"
            android:layout_height="wrap_content"
            android:divider="?android:verticalDivider"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:reverseLayout="true"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:elevation="?android:attr/actionBarSize"
            tools:listitem="@layout/kitchen_order_item_detail"
            app:layout_constraintStart_toStartOf="@+id/recycler_overflow_list"
            app:layout_constraintBottom_toTopOf="@+id/recycler_overflow_list" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_cold_list" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline">
    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_cold_list"
            android:layout_width="492dp"
            android:layout_height="wrap_content"
            android:divider="?android:verticalDivider"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:reverseLayout="true"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:elevation="?android:attr/actionBarSize"
            tools:listitem="@layout/kitchen_order_item_detail"
            app:layout_constraintStart_toStartOf="@+id/recycler_frozen_list"
            app:layout_constraintBottom_toTopOf="@+id/recycler_frozen_list" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_hot_list"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_overflow_list"
            android:layout_width="492dp"
            android:layout_height="wrap_content"
            android:divider="?android:verticalDivider"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:reverseLayout="true"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:elevation="?android:attr/actionBarSize"
            tools:listitem="@layout/kitchen_order_item_detail"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/recycler_frozen_list" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="45dp"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/guideline_top"
            app:layout_constraintGuide_begin="42dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="369dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="731dp"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/guideline9"
            app:layout_constraintGuide_end="672dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="59dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="672dp"
            android:layout_marginBottom="411dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            app:layout_constraintGuide_begin="395dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="395dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="731dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_begin="715dp"/>
    <TextView
            android:text="@string/shelf_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/recycler_hot_list"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/recycler_hot_list"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_hot_list"/>
    <TextView
            android:text="@string/shelf_overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/recycler_overflow_list"/>
    <TextView
            android:text="@string/shelf_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/recycler_cold_list"
    />
    <TextView
            android:text="@string/shelf_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/recycler_frozen_list"
    />
</android.support.constraint.ConstraintLayout>

